--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul>
         <li>BCA (2021-2024), MDU Rohtak</li>
         <li>MCA (2024-Present), IGNOU Noida</li>
-        <li>Intern at IICS, Delhi</li>
+        <li>Completed Full Stack Data Analytics Course from IICS, Delhi</li>
       </ul>
       <a href="https://www.linkedin.com/in/jyoti-kumari-29803a2b1" target="_blank">LinkedIn</a> |
       <a href="https://github.com/jyoti0305" target="_blank">GitHub</a> |
