--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jyoti Kumari | Data Analyst Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style_with_profile.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
@@ -26,13 +26,14 @@
   <main>
     <section id="about" class="slide-up">
       <h2>About Me</h2>
+      <img src="wi.png" alt="Jyoti Kumari" class="profile-img fade-in" />
       <p>
         I'm a data analyst skilled in Python, SQL, Power BI, Tableau, and Excel. I have completed impactful projects in healthcare and e-commerce analytics, improving data accuracy and enabling data-driven decisions.
       </p>
       <ul>
         <li>BCA (2021-2024), MDU Rohtak</li>
         <li>MCA (2024-Present), IGNOU Noida</li>
-        <li>Completed Full Stack Data Analytics Course from IICS, Delhi</li>
+        <li>Intern at IICS, Delhi</li>
       </ul>
       <a href="https://www.linkedin.com/in/jyoti-kumari-29803a2b1" target="_blank">LinkedIn</a> |
       <a href="https://github.com/jyoti0305" target="_blank">GitHub</a> |
