--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <section id="about" class="slide-up">
       <h2>About Me</h2>
-      <img src="wi.png" alt="Jyoti Kumari" class="profile-img fade-in" />
+      <img src="withBG.jpeg" alt="Jyoti Kumari" class="profile-img fade-in" />
       <p>
         I'm a data analyst skilled in Python, SQL, Power BI, Tableau, and Excel. I have completed impactful projects in healthcare and e-commerce analytics, improving data accuracy and enabling data-driven decisions.
       </p>
