--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
         <p>Used Python (Pandas, Matplotlib, Seaborn) for EDA on sales and profit data.</p>
         <a href="https://github.com/jyoti0305/myfirst" target="_blank">GitHub Repo</a>
       </div>
+
+      <div class="project zoom-in">
+        <h3>Youtube Trend Analysis</h3>
+        <p>Used Python (Pandas, Matplotlib, Seaborn) for cleaning and visualisation and PowerBI.</p>
+        <a href="https://lnkd.in/drs7K_bi" target="_blank">GitHub Repo</a>
+      </div>
+
+       <div class="project zoom-in">
+        <h3>Jobs Analysis</h3>
+        <p>Used PowerBI for Organizing,Analyzing and Visualizing the job trend , skill analysis and company insights.</p>
+        <a href="https://lnkd.in/dbny2DFH" target="_blank">powerBI server</a>
+      </div>
+
+       <div class="project zoom-in">
+        <h3>Zomato Analysis</h3>
+        <p>Used PowerBI To get to know about the most trending business nowdays.</p>
+        <a href="https://lnkd.in/dEKq3Wsc" target="_blank">powerBI server</a>
+      </div>
     </section>
 
     <section id="certificates" class="slide-up">
@@ -65,6 +83,7 @@
         <li>Data Analyst – United Latino Students Association (May 2025)</li><a href="https://oneroadmap.io/skills/da/certificate/CERT-331BE0C9" target="_blank">view here</a>
         <li>Python – United Latino Students Association (May 2025)</li><a href="https://oneroadmap.io/skills/python/certificate/CERT-341EF1B8" target="_blank">view here</a>
         <li>HackerRank Skill Certificate</li><a href="https://www.hackerrank.com/certificates/c3a2bb9a8fae?utm_campaign=social-buttons&utm_medium=linkedin&utm_source=certificate_social_share&social=linkedin" target="_blank">view here</a>
+        <li>IBM skillsbuild</li><a href="https:https://www.credly.com/org/ibm-skillsbuild/badge/data-fundamentals" target="_blank">view here</a>
       </ul>
     </section>
 
