--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <li>Data Analyst – United Latino Students Association (May 2025)</li><a href="https://oneroadmap.io/skills/da/certificate/CERT-331BE0C9" target="_blank">view here</a>
         <li>Python – United Latino Students Association (May 2025)</li><a href="https://oneroadmap.io/skills/python/certificate/CERT-341EF1B8" target="_blank">view here</a>
         <li>HackerRank Skill Certificate</li><a href="https://www.hackerrank.com/certificates/c3a2bb9a8fae?utm_campaign=social-buttons&utm_medium=linkedin&utm_source=certificate_social_share&social=linkedin" target="_blank">view here</a>
-        <li>IBM skillsbuild</li><a href="https:https://www.credly.com/org/ibm-skillsbuild/badge/data-fundamentals" target="_blank">view here</a>
+        <li>IBM skillsbuild</li><a href="https://www.credly.com/org/ibm-skillsbuild/badge/data-fundamentals" target="_blank">view here</a>
       </ul>
     </section>
 
