--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <section id="contact" class="slide-up">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:Js0133501@mail.com">Js0133501@mail.com</a></p>
+      <p>Email: <a href="mailto:Js0133501@mail.com">Js0133501@gmail.com</a></p>
     </section>
   </main>
 
@@ -98,3 +98,4 @@
   </footer>
 </body>
 </html>
+
